--- a/P1/index.html
+++ b/P1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expediente Warren Parque Warner</title>
 
@@ -25,7 +26,7 @@
             <li>Empresa: Tpt-eventos</li>
             <li>Redes sociales: @tpt_eventos</li>
             </ul>
-            
+
 
     
 </body>
