--- a/P1/index.html
+++ b/P1/index.html
@@ -24,8 +24,13 @@
             <li>Fecha de creacción: Noviembre de 2017</li>
             <li>Lugar: Zona del Oeste </li>
             <li>Empresa: Tpt-eventos</li>
-            <li>Redes sociales: @tpt_eventos</li>
             </ul>
+    
+        <h2 class = "Tizq">Redes Sociales</h2>
+        <ul class="info1">
+            <li>Instagram:@tpt_eventos</li>
+            <li>Pagina web: <a class = "url" href="https://tpteventos.com/">Tpt Eventos</a></li>
+        </ul>
 
 
     
