--- a/P1/index.html
+++ b/P1/index.html
@@ -26,7 +26,7 @@
             <li>Empresa: Tpt-eventos</li>
             </ul>
     
-        <h2 class = "Tizq">Redes Sociales</h2>
+        <h2 class = "Tizq">Redes Sociales Empresa</h2>
         <ul class="info1">
             <li>Instagram:@tpt_eventos</li>
             <li>Pagina web: <a class = "url" href="https://tpteventos.com/">Tpt Eventos</a></li>
