--- a/P1/index.html
+++ b/P1/index.html
@@ -29,7 +29,8 @@
         <h2 class = "Tizq">Redes Sociales Empresa</h2>
         <ul class="info1">
             <li>Instagram:@tpt_eventos</li>
-            <li>Pagina web: <a class = "url" href="https://tpteventos.com/">Tpt Eventos</a></li>
+            <li>Pagina web: </li>
+            <a class = "url" href="https://tpteventos.com/">Tpt Eventos</a>
         </ul>
 
 
