--- a/P1/index.html
+++ b/P1/index.html
@@ -33,6 +33,21 @@
             <a class = "url" href="https://tpteventos.com/">Tpt Eventos</a>
         </ul>
 
+        <p>
+            <a class = "url" href="httpas://amartinezs2021.github.io/2024-2025-CSAAI-Practicas/P1/about.html">Personajes</a>
+        </p>
+    </div>
+
+    <div id="c2" class="columna derecha">
+        <h1>EXPEDIENTE WARREN</h1>
+
+        <h2>Informacion</h2>
+        <p id = "i" class = "info2">"The Conjuring Universe" o tambien conocido en español como "Universo de Expediente Warren" se trata de una serie de películas
+            de terror que trtan casos de la vida real de Ed y Lorraine Warren, dos famosos investigadores estadounidenses de fenómenos paranormales, autores de casos tan conocidos 
+            como controvertidos. Ahora puedes revivir todo el universo de los Warren en primera persona. O, al menos, de una manera muy vívida gracias a un pasaje del terro de 
+            Expedientes Warren en Warner de Madrid dedicado a estos personajes. </p>
+    </div>
+
 
     
 </body>
