--- a/P1/index.html
+++ b/P1/index.html
@@ -43,7 +43,7 @@
     <div id="c2" class="columna derecha">
         <h1>EXPEDIENTE WARREN</h1>
 
-        <h2>Informacion</h2>
+        <h2>Información</h2>
         <p id = "i" class = "info2">"The Conjuring Universe" o tambien conocido en español como "Universo de Expediente Warren" se trata de una serie de películas
             de terror que trtan casos de la vida real de Ed y Lorraine Warren, dos famosos investigadores estadounidenses de fenómenos paranormales, autores de casos tan conocidos 
             como controvertidos. Ahora puedes revivir todo el universo de los Warren en primera persona. O, al menos, de una manera muy vívida gracias a un pasaje del terro de 
