--- a/P1/index.html
+++ b/P1/index.html
@@ -55,7 +55,7 @@
                                     Es el único del mundo que se adentra en los horrores de este matrimonio de investigadores. </p>
         
         <h2>Especificaciones</h2>                            
-        <ol>
+        <ol id = "i" class = "info2">
             <li>Abierto de 15:00pm a 19:00pm</li>
             <li>Recomendado para mayores de 12 años</li>
             <li>Precio: 7 euros por persona</li>
