--- a/P1/index.html
+++ b/P1/index.html
@@ -55,14 +55,14 @@
                                     Es el único del mundo que se adentra en los horrores de este matrimonio de investigadores. </p>
         
         <h2>Especificaciones</h2>                            
-        <ol id = "i" class = "info2">
-            <li>Abierto de 15:00pm a 19:00pm</li>
-            <li>Recomendado para mayores de 12 años</li>
-            <li>Precio: 7 euros por persona</li>
-            <li>Duración: entre 5 y 10 minutos</li>
-            <li>Prohibido el uno de dispositivos de grabación tanto de audio como de video</li>
-            <li>No recomendado para embarazadas o personas con problemas de corazón</li>
-        </ol>
+        <ul id = "i" class = "info2">
+            <li>1.Abierto de 15:00pm a 19:00pm</li>
+            <li>2.Recomendado para mayores de 12 años</li>
+            <li>3.Precio: 7 euros por persona</li>
+            <li>4.Duración: entre 5 y 10 minutos</li>
+            <li>5.Prohibido el uno de dispositivos de grabación tanto de audio como de video</li>
+            <li>6.No recomendado para embarazadas o personas con problemas de corazón</li>
+        </ul>
 
         
     </div>
