--- a/P1/index.html
+++ b/P1/index.html
@@ -36,7 +36,7 @@
         </ul>
 
         <p>
-            <a class = "url" href="httpas://amartinezs2021.github.io/2024-2025-CSAAI-Practicas/P1/about.html">Personajes</a>
+            <a class = "url" href="https://amartinezs2021.github.io/2024-2025-CSAAI-Practicas/P1/about.html">Personajes</a>
         </p>
     </div>
 
