--- a/P1/about.html
+++ b/P1/about.html
@@ -27,7 +27,7 @@
 
             <tr>
                 <td>Mullins</td>
-                <td><img scr="prueba.webp" alt="html5" width="100%" heigth="100%"> </td>
+                <td><img scr="prueba.webp"> </td>
                 <td>Mullins es una niña que se convierte en el foco de una maldición en la pelicula Anabelle: Creation(2017).
                     En la pelicula nos cuentan como la tragedia y el dolor de sus padres, la llevan a la creación de la muñeca Annabelle, que se convierte en uno de los objetos más terrorificos.
                     Dentro del pasaje será el primer personaje que encontremos, con un gran impacto para iniciar de una manera escalofriante nuestro recorrido.
