--- a/P1/index.html
+++ b/P1/index.html
@@ -64,6 +64,9 @@
             <li>6.No recomendado para embarazadas o personas con problemas de corazón</li>
         </ul>
 
+        <h2>Yolanda Dineris</h2>
+        <p id = "i" class = "info2">Yolandita dineris cuando se pone el aparato de los dientes se transforma en Yolandita enfados</p>
+
         
     </div>
 
