--- a/P1/about.html
+++ b/P1/about.html
@@ -30,7 +30,15 @@
                 <td><img id = "imghtml" scr="mullins.jpg" alt="Mullins"> </td>
                 <td>Mullins es una niña que se convierte en el foco de una maldición en la pelicula Anabelle: Creation(2017).
                     En la pelicula nos cuentan como la tragedia y el dolor de sus padres, la llevan a la creación de la muñeca Annabelle, que se convierte en uno de los objetos más terrorificos.
-                    Dentro del pasaje será el primer personaje que encontremos, con un gran impacto para iniciar de una manera escalofriante nuestro recorrido.
+                    Dentro del pasaje será el primer personaje que encontremos, con un gran impacto para iniciar de una manera escalofriante nuestro recorrido.</td>
+            </tr>
+
+            <tr>
+                <td>Higgins</td>
+                <td><img id = "imghtml" scr="higgins.jpg" alt="Higgins"></td>
+                <td>Annabelle Higgins es un personaje de la película Annabelle (2014), que forma parte del universo de El Conjuro. Es una joven mujer que pertenece a la secta satánica Los Discípulos del Carnero y es responsable de la maldición de la muñeca Annabelle.
+                    Es una mujer pálida, con el cabello oscuro y largo, generalmente vestida con un camisón blanco ensangrentado. Su rostro suele verse desfigurado o cubierto de sangre en las escenas más aterradoras.
+                </td>
             </tr>
         </table>
     </div>
