--- a/P1/about.html
+++ b/P1/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personajes</title>
-    <link rel ="stylesheet" href="about.css">
+    <link rel ="stylesheet" href="2c-template.css">
     <link rel = "shortcut icon" href="FotoPerfil.jpg" tipe ="image/x-icon">
 
 </head>
