--- a/P1/index.html
+++ b/P1/index.html
@@ -9,6 +9,7 @@
         <!--Hoja de estilo-->
     <link rel="icon" href="favicon.gif">
     <link rel="stylesheet" href="2c-template.css">
+    <link rel = "shortcut icon" href="FotoPerfil.jpg" tipe ="image/x-icon">
     
 </head>
 <body>
