--- a/P1/about.html
+++ b/P1/about.html
@@ -41,6 +41,13 @@
                 </td>
                 
             </tr>
+
+            <tr>
+                <td>Ed y Lorrain</td>
+                <td><img id="imghtml" scr="ed_y_lorrain.jpeg" alt="ed_y_lorrain"> </td>
+                <td>Ed y Lorraine Warren son una legendaria pareja de investigadores paranormales en el universo de Expediente Warren (The Conjuring Universe), dedicados a enfrentar fuerzas demoníacas y ayudar a familias atormentadas por entidades sobrenaturales. 
+                    Interpretados por Patrick Wilson y Vera Farmiga, su historia está inspirada en los verdaderos Warren, quienes documentaron algunos de los casos paranormales más famosos de la historia.</td>
+            </tr>
         </table>
     </div>
     
