--- a/P1/about.html
+++ b/P1/about.html
@@ -44,7 +44,7 @@
 
             <tr>
                 <td>Ed y Lorrain</td>
-                <td><img id="imghtml" scr="ed_y_lorrain.jpeg" alt="ed_y_lorrain"> </td>
+                <td><img id="imghtml" src="ed_y_lorraine.jpg" alt="ed_y_lorraine"> </td>
                 <td>Ed y Lorraine Warren son una legendaria pareja de investigadores paranormales en el universo de Expediente Warren (The Conjuring Universe), dedicados a enfrentar fuerzas demoníacas y ayudar a familias atormentadas por entidades sobrenaturales. 
                     Interpretados por Patrick Wilson y Vera Farmiga, su historia está inspirada en los verdaderos Warren, quienes documentaron algunos de los casos paranormales más famosos de la historia.</td>
             </tr>
