volver a la pagina

--- a/P1/about.html
+++ b/P1/about.html
@@ -49,6 +49,9 @@
                     Interpretados por Patrick Wilson y Vera Farmiga, su historia está inspirada en los verdaderos Warren, quienes documentaron algunos de los casos paranormales más famosos de la historia.</td>
             </tr>
         </table>
+
+
+        <a id="volverpagina" href="https://amartinezs2021.github.io/2024-2025-CSAAI-Practicas/P1/">Volver a la página principal</a>
     </div>
     
 </body>
