--- a/P1/about.html
+++ b/P1/about.html
@@ -48,6 +48,36 @@
                 <td>Ed y Lorraine Warren son una legendaria pareja de investigadores paranormales en el universo de Expediente Warren (The Conjuring Universe), dedicados a enfrentar fuerzas demoníacas y ayudar a familias atormentadas por entidades sobrenaturales. 
                     Interpretados por Patrick Wilson y Vera Farmiga, su historia está inspirada en los verdaderos Warren, quienes documentaron algunos de los casos paranormales más famosos de la historia.</td>
             </tr>
+
+            <tr>
+                <td>Caroline</td>
+                <td><img id="imghtml" src="caroline.jpg" alt ="caroline"></td>
+                <td>Es uno de los personajes principales en la película y la madre de cinco hijas, incluida April, quien juega un papel importante en la historia. La familia se muda a una casa aislada en Rhode Island en 1971, sin saber que está siendo acosada por fuerzas paranormales.</td>
+            </tr>
+
+            <tr>
+                <td>Bathseeba</td>
+                <td><img id = "imghtml" src="bathseeba-1.webp" alt="bathseeba"></td>
+                <td>Según la película, era una mujer del siglo XIX acusada de brujería y de sacrificar a su hijo en honor a Satanás. Su espíritu maligno atormenta a la familia Perron en su casa en Harrisville, Rhode Island, mostrando una presencia aterradora y violenta.</td>
+            </tr>
+
+            <tr>
+                <td>Valak</td>
+                <td><img id ="imghtml" src="valak.webp" alt="valak"></td>
+                <td>Valak es la entidad demoníaca principal en El Conjuro 2 y La Monja. Se manifiesta como una monja de apariencia terrorífica, con piel pálida, ojos amarillos y un hábito oscuro. Es un demonio de alto rango que busca sembrar el miedo y la desesperación, desafiando la fe de quienes intentan enfrentarlo. Su presencia es especialmente aterradora debido a su habilidad para manipular la realidad y poseer a sus víctimas. Aunque basado en un demonio de la demonología real, su representación en la franquicia El Conjuro es una creación ficticia para aumentar el terror.</td>
+            </tr>
+
+            <tr>
+                <td>Novia</td>
+                <td><img id = "imghtml" src="novia.jpg" alt="novia"></td>
+                <td>Es una entidad fantasmal vinculada a un vestido de novia poseído, que obliga a quienes lo usan a cometer asesinatos. Su historia sugiere que una novia asesinó a su prometido y quedó atrapada en el vestido, maldiciéndolo. En la película, su presencia es aterradora, ya que acecha y posee a quienes se acercan al vestido, buscando nuevas víctimas para continuar su macabro legado.</td>
+            </tr>
+
+            <tr>
+                <td>Isla</td>
+                <td><img id = "imghtml" src="isla.webp" alt = "isla"></td>
+                <td>Es la líder de un culto satánico que practica magia oscura y rituales de invocación demoníaca. Su presencia está vinculada a los artefactos malditos en la colección de los Warren, ya que sus prácticas dejaron una huella de maldad en varios objetos. Aunque no es un espíritu en sí, su influencia persiste a través de los elementos ocultistas que dejó atrás, provocando fenómenos paranormales y desatando fuerzas malignas.</td>
+            </tr>
         </table>
 
 
