cambio de tematica

--- a/P1/about.html
+++ b/P1/about.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 
-    <h1 class = "titulos">Información personajes:</h1>
+    <h1 class = "titulos">Información personajes a los que se ha enfrentado:</h1>
 
     <div class="iresponsive">
 
         <ul>
-            <li>Una vez te adentres en el pasaje podrás encontrarte los siguientes personajes:</li>
+            <li>Mi esposa y yo nos hemos enfrentado a inumerables criaturas a lo largo de nuestra carrera, pero los mas destacables son los siguientes:</li>
         </ul>
 
         <table>
@@ -23,36 +23,6 @@
                 <th id="nombre">Nombre</th>
                 <th>Imagen</th>
                 <th id="description">Descripción</th>
-            </tr>
-
-            <tr>
-                <td>Mullins</td>
-                <td><img id="imghtml" src="mullins.jpg" alt="FotoPerfil"> </td>
-                <td>Mullins es una niña que se convierte en el foco de una maldición en la pelicula Anabelle: Creation(2017).
-                    En la pelicula nos cuentan como la tragedia y el dolor de sus padres, la llevan a la creación de la muñeca Annabelle, que se convierte en uno de los objetos más terrorificos.
-                    Dentro del pasaje será el primer personaje que encontremos, con un gran impacto para iniciar de una manera escalofriante nuestro recorrido.</td>
-            </tr>
-
-            <tr>
-                <td>Higgins</td>
-                <td><img id="imghtml" src="higgins.jpg" alt="FotoPerfil"></td>
-                <td>Annabelle Higgins es un personaje de la película Annabelle (2014), que forma parte del universo de El Conjuro. Es una joven mujer que pertenece a la secta satánica Los Discípulos del Carnero y es responsable de la maldición de la muñeca Annabelle.
-                    Es una mujer pálida, con el cabello oscuro y largo, generalmente vestida con un camisón blanco ensangrentado. Su rostro suele verse desfigurado o cubierto de sangre en las escenas más aterradoras.
-                </td>
-                
-            </tr>
-
-            <tr>
-                <td>Ed y Lorrain</td>
-                <td><img id="imghtml" src="ed_y_lorraine.jpg" alt="ed_y_lorraine"> </td>
-                <td>Ed y Lorraine Warren son una legendaria pareja de investigadores paranormales en el universo de Expediente Warren (The Conjuring Universe), dedicados a enfrentar fuerzas demoníacas y ayudar a familias atormentadas por entidades sobrenaturales. 
-                    Interpretados por Patrick Wilson y Vera Farmiga, su historia está inspirada en los verdaderos Warren, quienes documentaron algunos de los casos paranormales más famosos de la historia.</td>
-            </tr>
-
-            <tr>
-                <td>Caroline</td>
-                <td><img id="imghtml" src="caroline.jpg" alt ="caroline"></td>
-                <td>Es uno de los personajes principales en la película y la madre de cinco hijas, incluida April, quien juega un papel importante en la historia. La familia se muda a una casa aislada en Rhode Island en 1971, sin saber que está siendo acosada por fuerzas paranormales.</td>
             </tr>
 
             <tr>
@@ -68,12 +38,6 @@
             </tr>
 
             <tr>
-                <td>Novia</td>
-                <td><img id = "imghtml" src="novia.jpg" alt="novia"></td>
-                <td>Es una entidad fantasmal vinculada a un vestido de novia poseído, que obliga a quienes lo usan a cometer asesinatos. Su historia sugiere que una novia asesinó a su prometido y quedó atrapada en el vestido, maldiciéndolo. En la película, su presencia es aterradora, ya que acecha y posee a quienes se acercan al vestido, buscando nuevas víctimas para continuar su macabro legado.</td>
-            </tr>
-
-            <tr>
                 <td>Isla</td>
                 <td><img id = "imghtml" src="isla.webp" alt = "isla"></td>
                 <td>Es la líder de un culto satánico que practica magia oscura y rituales de invocación demoníaca. Su presencia está vinculada a los artefactos malditos en la colección de los Warren, ya que sus prácticas dejaron una huella de maldad en varios objetos. Aunque no es un espíritu en sí, su influencia persiste a través de los elementos ocultistas que dejó atrás, provocando fenómenos paranormales y desatando fuerzas malignas.</td>
@@ -81,7 +45,7 @@
         </table>
 
 
-        <a id="volverpagina" href="https://amartinezs2021.github.io/2024-2025-CSAAI-Practicas/P1/">Volver a la página principal</a>
+        <a id="volverpagina" href="https://amartinezs2021.github.io/2024-2025-CSAAI-Practicas/P1/">Información sobre mi</a>
     </div>
     
 </body>
