--- a/P1/index.html
+++ b/P1/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div id="c2" class="columna derecha">
-        <h1>EXPEDIENTE WARREN</h1>
+        <h1>Ed Warren</h1>
 
         <h2>Quien soy</h2>
         <p id = "i" class = "info2">Me llamo Ed Warren, y junto a mi esposa Lorraine, he dedicado mi vida a investigar lo paranormal. Soy demonólogo, aunque nunca estudié en ninguna universidad para ello; mi conocimiento viene de años de experiencia enfrentando fuerzas que muchos prefieren ignorar. Desde los casos más perturbadores hasta los encuentros más inexplicables, he visto de cerca el poder del mal… y también el de la fe. Juntos, Lorraine y yo hemos ayudado a cientos de familias, documentado fenómenos aterradores y enfrentado entidades que desafían toda lógica. Algunos dudan de nuestro trabajo, pero aquellos que han sentido la presencia de la oscuridad saben que es real </p>
