--- a/P1/about.html
+++ b/P1/about.html
@@ -28,19 +28,19 @@
             <tr>
                 <td>Bathseeba</td>
                 <td><img id = "imghtml" src="bathseeba-1.webp" alt="bathseeba"></td>
-                <td>Según la película, era una mujer del siglo XIX acusada de brujería y de sacrificar a su hijo en honor a Satanás. Su espíritu maligno atormenta a la familia Perron en su casa en Harrisville, Rhode Island, mostrando una presencia aterradora y violenta.</td>
+                <td>Era una mujer del siglo XIX acusada de brujería y de sacrificar a su hijo en honor a Satanás. Su espíritu maligno atormenta a la familia Perron en su casa en Harrisville, Rhode Island, mostrando una presencia aterradora y violenta.</td>
             </tr>
 
             <tr>
                 <td>Valak</td>
                 <td><img id ="imghtml" src="valak.webp" alt="valak"></td>
-                <td>Valak es la entidad demoníaca principal en El Conjuro 2 y La Monja. Se manifiesta como una monja de apariencia terrorífica, con piel pálida, ojos amarillos y un hábito oscuro. Es un demonio de alto rango que busca sembrar el miedo y la desesperación, desafiando la fe de quienes intentan enfrentarlo. Su presencia es especialmente aterradora debido a su habilidad para manipular la realidad y poseer a sus víctimas. Aunque basado en un demonio de la demonología real, su representación en la franquicia El Conjuro es una creación ficticia para aumentar el terror.</td>
+                <td>Valak es la entidad demoníaca principal en El Conjuro 2 y La Monja. Se manifiesta como una monja de apariencia terrorífica, con piel pálida, ojos amarillos y un hábito oscuro. Es un demonio de alto rango que busca sembrar el miedo y la desesperación, desafiando la fe de quienes intentan enfrentarlo. Su presencia es especialmente aterradora debido a su habilidad para manipular la realidad y poseer a sus víctimas.</td>
             </tr>
 
             <tr>
                 <td>Isla</td>
                 <td><img id = "imghtml" src="isla.webp" alt = "isla"></td>
-                <td>Es la líder de un culto satánico que practica magia oscura y rituales de invocación demoníaca. Su presencia está vinculada a los artefactos malditos en la colección de los Warren, ya que sus prácticas dejaron una huella de maldad en varios objetos. Aunque no es un espíritu en sí, su influencia persiste a través de los elementos ocultistas que dejó atrás, provocando fenómenos paranormales y desatando fuerzas malignas.</td>
+                <td>Es la líder de un culto satánico que practica magia oscura y rituales de invocación demoníaca. Su presencia está vinculada a los artefactos malditos en la colección de los Warren, ya que sus prácticas dejaron una huella de maldad en varios objetos.</td>
             </tr>
         </table>
 
