--- a/P1/about.html
+++ b/P1/about.html
@@ -34,7 +34,7 @@
             <tr>
                 <td>Valak</td>
                 <td><img id ="imghtml" src="valak.webp" alt="valak"></td>
-                <td>Valak es la entidad demoníaca principal en El Conjuro 2 y La Monja. Se manifiesta como una monja de apariencia terrorífica, con piel pálida, ojos amarillos y un hábito oscuro. Es un demonio de alto rango que busca sembrar el miedo y la desesperación, desafiando la fe de quienes intentan enfrentarlo. Su presencia es especialmente aterradora debido a su habilidad para manipular la realidad y poseer a sus víctimas.</td>
+                <td>Valak es la entidad demoníaca principal en El Conjuro 2 y La Monja. Se manifiesta como una monja de apariencia terrorífica, con piel pálida, ojos amarillos y un hábito oscuro. Es un demonio de alto rango que busca sembrar el miedo y la desesperación, desafiando la fe de quienes intentan enfrentarlo.</td>
             </tr>
 
             <tr>
