principio del esqueleto

--- a/P2/index.html
+++ b/P2/index.html
@@ -5,3 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡BOOM!</title>
+
+     <!-- Hoja de estilo -->
+   <link rel="icon" href="faviconbomba.png">
+   <script src="cronO.js" defer></script>
+   <script src="cronoBueno.js" defer></script>
+   <script src="boom.js" defer></script>
+   <link rel="stylesheet" href="boom.css"> 
+</head>
+
+<body>
+    <div>
+        <h1>¡BOOM!</h1>
+    </div>
+</body>
+
+<div class = "clavesecreta">
+    <p id = "clave1" class = "claves"></p>
+    <p id = "clave2" class = "claves"></p>
+    <p id = "clave3" class = "claves"></p>
+    <p id = "clave4" class = "claves"></p>
+</div>
+
+<div>
+    <p id="display">0:0:0</p>
+</div>
+
