--- a/P2/index.html
+++ b/P2/index.html
@@ -8,7 +8,7 @@
 
      <!-- Hoja de estilo -->
    <link rel="icon" href="faviconbomba.png">
-   <script src="cronO.js" defer></script>
+   <script src="crono.js" defer></script>
    <script src="cronoBueno.js" defer></script>
    <script src="boom.js" defer></script>
    <link rel="stylesheet" href="boom.css"> 
