--- a/P2/index.html
+++ b/P2/index.html
@@ -15,8 +15,11 @@
 </head>
 
 <body>
+    </div>
     <div>
         <h1>¡BOOM!</h1>
+        <h3>Estas encerrado con Aiko en un scape room </h3>
+        <h3>¡Adivina la clave antes de que Aiko se enfade!</h3>
     </div>
 </body>
 
