cambio de color de cabeceras

--- a/P2/index.html
+++ b/P2/index.html
@@ -18,8 +18,8 @@
     </div>
     <div>
         <h1>¡BOOM!</h1>
-        <h3>Estas encerrado con Aiko en un scape room </h3>
-        <h3>¡Adivina la clave antes de que Aiko se enfade!</h3>
+        <h3 style="color:red">Estas encerrado con Aiko en un scape room </h3>
+        <h3 style = "color:red">¡Adivina la clave antes de que Aiko se enfade!</h3>
     </div>
 </body>
 
