--- a/P2/index.html
+++ b/P2/index.html
@@ -18,10 +18,9 @@
     </div>
     <div>
         <h1>¡BOOM!</h1>
-        <h3 style="color:red">Estas encerrado con Aiko en un scape room </h3>
-        <h3 style = "color:red">¡Adivina la clave antes de que Aiko se enfade!</h3>
+        <p style="color:rgb(8, 103, 180)">¡Oh no! Has caido en la trampa de Jinx, sabe que eres un fireligths</h3>
+        <p style = "color:rgb(8, 103, 180)">¡Adivina la clave antes de que la bomba de Jinx explote!</h3>
     </div>
-</body>
 
 <div class = "clavesecreta">
     <p id = "clave1" class = "claves"></p>
@@ -34,3 +33,36 @@
     <p id="display">0:0:0</p>
 </div>
 
+<div class = "numeros">
+    <button type="button" id="boton1" value="1" class="digito">1</button>
+    <button type="button" id="boton2" value="2" class="digito">2</button>
+    <button type="button" id="boton3" value="1" class="digito">3</button>
+    <br><br>
+</div>
+
+<div class = "numeros">
+    <button type="button" id="boton4" value="4" class="digito">4</button>
+    <button type="button" id="boton5" value="5" class="digito">5</button>
+    <button type="button" id="boton6" value="6" class="digito">6</button>
+    <br><br>
+</div>
+
+<div class = "numeros">
+    <button type="button" id="boton7" value="7" class="digito">7</button>
+    <button type="button" id="boton8" value="8" class="digito">8</button>
+    <button type="button" id="boton9" value="9" class="digito">9</button>
+    <br><br>
+</div>
+
+<div class = "numeros">
+    <button type="button" id="boton0" value="0" class = "digito">0</button>
+    <br><br>
+</div>
+
+<div class = "numeros">
+    <button type="button" id="start">Start</button>
+    <button type="button" id="stop">Stop</button>
+    <button type="button" id="reset">Reset</button>
+</div>
+
+</body>
