--- a/P2/index.html
+++ b/P2/index.html
@@ -18,8 +18,8 @@
     </div>
     <div>
         <h1>¡BOOM!</h1>
-        <p style="color:rgb(8, 103, 180)">¡Oh no! Has caido en la trampa de Jinx, sabe que eres un fireligths</h3>
-        <p style = "color:rgb(8, 103, 180)">¡Adivina la clave antes de que la bomba de Jinx explote!</h3>
+        <h2 style="color:rgb(8, 103, 180)">¡Oh no! Has caido en la trampa de Jinx, sabe que eres un fireligths</h3>
+        <h2 style = "color:rgb(8, 103, 180)">¡Adivina la clave antes de que la bomba de Jinx explote!</h3>
     </div>
 
 <div class = "clavesecreta">
