cambio de texto

--- a/P2/index.html
+++ b/P2/index.html
@@ -15,8 +15,8 @@
         <h1>Bienvenido Jugador</h1>
         <div id="info">
             <ul>
-                <li id= "l1"><h2>¡Jajaja! ¡Hola, hola! Me alegra que hayas decidido jugar a mi juego. Me encanta un buen reto.</h2></li>
-                <li id= "l2"><h2>Si quieres escapar, necesitarás ser más lista que eso, ¡pero no te preocupes! Te daré una pista…</h2></li>
+                <li id= "l1"><h2>¡Jajaja! ¡Hola, hola! Ya he visto que has caido en mi trampa. ¿Con que ayudando a los Kiramman... Patetico</h2></li>
+                <li id= "l2"><h2>Si quieres escapar, necesitarás ser más listo que eso, ¡pero no te preocupes! Te daré una pista… No soy tan mala</h2></li>
                 <li id= "l3"><h2>La clave de la bomba, ¿eh? ¡Qué emocionante! Está justo frente a ti, pero, ¿cómo puedes saberla?  </h2></li>
                 <li id= "l4"><h2>Hmm... Pista número uno: la respuesta se encuentra en 4 numeros</h2></li>
                 <li id= "l5"><h2>Piénsalo bien, porque si no lo adivinas... ¡BOOOM! 💥 ¡Oops!</h2></li>
