--- a/P3/index.html
+++ b/P3/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="startScreen">
         <h1>Bienvenido</h1>
-        <p>"Eres el nuevo integrante de la tripulación Tulpar, pero pony express ha salido de control, destruye a todos los enemigos antes de que ellos te eliminen a ti".</p>
+        <p>"Eres el nuevo integrante de la tripulación Tulpar, pero pony express  se ha salido de control, destruye a todos los enemigos antes de que ellos te destruyan a ti".</p>
         <img id="fondoInicio" src="fondoInicio.gif" alt="Pony Express" width="300">
         <button id="startButton">JUGAR</button>
     </div>
