--- a/P3/index.html
+++ b/P3/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tulpar vs Aliens</title>
     <link rel="stylesheet" href="alien.css">
+
+    <style>
+        #startScreen {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: url('fondoInicio.gif') no-repeat center center;
+            background-size: cover;
+            z-index: 10;   
+        }
+    </style>    
 </head>
 <body>
     <div id="startScreen">
