--- a/P3/index.html
+++ b/P3/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tulpar vs Aliens</title>
     <link rel="stylesheet" href="alien.css">
-
     <style>
         #startScreen {
             text-align: center;
@@ -40,5 +39,16 @@
     <audio id="victorySound" src="sonido.mp3" preload="auto"></audio>
     
     <script src="alien.js"></script>
+    <script>
+        document.getElementById("startButton").addEventListener("click", function() {
+            document.getElementById("startScreen").style.display = "none";
+            document.getElementById("gameContainer").style.display = "block";
+
+            // Llamar a función de inicio si existe
+            if (typeof startGame === "function") {
+                startGame();
+            }
+        });
+    </script>
 </body>
 </html>
