--- a/P3/index.html
+++ b/P3/index.html
@@ -23,7 +23,8 @@
     <p>Es muy simple, muevete de derecha a izquierda con las flechas del teclado y pulsa espacio para disparar</p>
     <p>Buena suerte Curly, siempre al servicio de Pony Express</p>
     <button id="startButton">Emergency is comming</button>
-  </div>
+    <img scr = "Descent_into_Madness.gif" alt="">
+    </div>
 
   <div id="hud">
     <span id="score">Puntuación: 0</span>
