--- a/P3/index.html
+++ b/P3/index.html
@@ -63,9 +63,12 @@
   </script>
 
 <div id="gameOverMessage">
+  <h2 id="messageTitle">¡Victoria!</h2>
+  <p id="messageText">Puntuación: 0</p>
   <button id="restartButton">Jugar de nuevo</button>
 </div>
 
+</body>
   <script src="alien.js"></script>
 </body>
 </html>
