--- a/P3/index.html
+++ b/P3/index.html
@@ -65,7 +65,7 @@
 <div id="gameOverMessage">
   <h2 id="messageTitle">¡Victoria!</h2>
   <p id="messageText">Puntuación: 0</p>
-  <button id="restartButton">Jugar de nuevo</button>
+  <button id="startButton">Jugar de nuevo</button>
 </div>
 
 </body>
