--- a/P3/index.html
+++ b/P3/index.html
@@ -68,6 +68,12 @@
   <button id="restartButton">Jugar de nuevo</button>
 </div>
 
+<div id="mobileControls" style="display: none;">
+  <button id="leftButton">←</button>
+  <button id="fireButton">🔥</button>
+  <button id="rightButton">→</button>
+</div>
+
 </body>
   <script src="alien.js"></script>
 </body>
