--- a/P3/index.html
+++ b/P3/index.html
@@ -70,7 +70,7 @@
 
 <div id="mobileControls" style="display: none;">
   <button id="leftButton">←</button>
-  <button id="fireButton">🔥</button>
+  <button id="fireButton">💣</button>
   <button id="rightButton">→</button>
 </div>
 
