--- a/P3/index.html
+++ b/P3/index.html
@@ -74,6 +74,12 @@
   <button id="rightButton">→</button>
 </div>
 
+<audio id="backgroundMusic" loop>
+  <source src="Headlock.mp3" type="audio/mpeg">
+  Tu navegador no soporta audio.
+</audio>
+
+
 </body>
   <script src="alien.js"></script>
 </body>
